# DATN_QT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c2bf735  README.md  main.cpp
controller/: audiocontroller.cpp  audiocontroller.h  maincontroller.cpp  maincontroller.h  mediacontroller.cpp  mediacontroller.h  playlistcontroller.cpp  playlistcontroller.h  uartcontroller.cpp  uartcontroller.h  videocontroller.cpp  videocontroller.h
database/: database.cpp  database.h  mediafiledao.cpp  mediafiledao.h  playlistdao.cpp  playlistdao.h
include/controller/: mediacontroller.h  uartcontroller.h
include/model/: mediafile.h  playlist.h  uartreceiver.h  usbscannermodel.h
include/view/: audioview.h  mainwindow.h  playlistview.h  videoview.h
model/: mediafile.cpp  mediafile.h  playlist.cpp  playlist.h  uartreceiver.cpp  uartreceiver.h  usbscanner.cpp  usbscanner.h
src/controller/: mediacontroller.cpp  uartcontroller.cpp
src/model/: mediafile.cpp  playlist.cpp  uartreceiver.cpp  usbscanner.cpp  usbscannermodel.cpp
src/view/: audioview.cpp  audioview.ui  mainwindow.cpp  mainwindow.ui  playlistview.cpp  playlistview.ui  videoview.cpp  videoview.ui
view/: audioview.cpp  audioview.h  audioview.ui  audiowindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playlistview.cpp  playlistview.h  playlistview.ui  playlistwindow.ui  videoview.cpp  videoview.h  videowindow.ui  virtualkeyboard.cpp  virtualkeyboard.h
